--- a/src/main/java/resources/application.yml
+++ b/src/main/java/resources/application.yml
@@ -15,6 +15,10 @@ spring:
     username: root
     password: 123456
     url: jdbc:mysql://127.0.0.1:3306/test?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
+  thymeleaf:
+    cache: false
+    prefix: classpath:/templates/
+
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*Mapper.xml
   configuration:
@@ -26,5 +30,13 @@ mybatis-plus:
       logic-delete-field: deleted # 全局逻辑删除的实体字段名(since 3.3.0,配置后可以忽略不配置步骤2)
       logic-delete-value: 1 # 逻辑已删除值(默认为 1)
       logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+
+
+jwt:
+  data:
+    # jwt 加密密钥
+    SECRET: jwtToken
+    # 60s*60min*24h*7day
+    expiration: 604800
 
 
