2024/6/04 SpringMVC Aop 日志记录功能实现

--- a/src/main/java/resources/application.yml
+++ b/src/main/java/resources/application.yml
@@ -38,5 +38,8 @@ jwt:
     SECRET: jwtToken
     # 60s*60min*24h*7day
     expiration: 604800
+log:
+  file:
+    path: src/main/java/resources/log/log.txt
 
 
