--- a/src/main/java/resources/application.yml
+++ b/src/main/java/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   redis:
-    host: 127.0.0.1
-    port: 6379
+    host: ${ALIYUN_SERVER_HOST}
+    port: 6378
     database: 2
-    password:
+    password: 123456
     timeout: 2000
     pool:
       max-active: 8
