--- a/src/main/java/resources/application.yml
+++ b/src/main/java/resources/application.yml
@@ -3,7 +3,6 @@ spring:
     host: ${ALIYUN_SERVER_HOST}
     port: 6378
     database: 2
-    password: 123456
     timeout: 2000
     pool:
       max-active: 8
@@ -11,13 +10,12 @@ spring:
       max-wait: -1
       min-idle: 0
       max-total: 10
+    password: 123456
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://127.0.0.1:3306/demo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
-  thymeleaf:
-    cache: false
-    prefix: classpath:/templates/
+    url: jdbc:mysql://${ALIYUN_SERVER_HOST}:3306/demo?serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=utf-8&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis-plus:
   mapper-locations: classpath*:mapper/**/*Mapper.xml
